re PR c++/21853 (constness of pointer to data member ignored)

PR c++/21853
	* typeck.c (casts_away_constness_r): Do not drop cv-qualifiers on
	the pointed-to type for a pointer-to-member.

	PR c++/21853
	* g++.dg/expr/static_cast6.C: New test.

From-SVN: r100562